--- a/Untitled84.ipynb
+++ b/Untitled84.ipynb
@@ -434,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "fLjqnnz9ZZ4A"
       },
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "w0PT5TEVaJih"
       },
@@ -478,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -513,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "grstWebkbbyz"
       },
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "8XqG4XcO-1dj"
       },
@@ -548,7 +548,7 @@
         "      self.offset = self.dir[:-2048] if training else self.dir[2048:]\n",
         "\n",
         "    def on_epoch_end(self):\n",
-        "        np.shuffle(self.dir)\n",
+        "        np.random.shuffle(self.dir)\n",
         "\n",
         "    def __getitem__(self, index_):\n",
         "        start_index = index_ * self.batch_size\n",
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "PBg1QMglSDzk"
       },
@@ -623,32 +623,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 536
         },
         "id": "J7efcfjlLWEz",
-        "outputId": "9e84df99-3267-4418-97a9-6a4676b5cd1b"
+        "outputId": "40c4babf-e360-4e45-bf70-4c4e331a1c97"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "=O😘OO(OS4S]BOSOS2OClSSSO3SSSC]##S]SOO5SOOOP=BP#SO#SO(O##\n"
+            "))))))))))))))))))))))))))))))))))))))))))))))))))))))))\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7a6540cba170>"
+              "<matplotlib.image.AxesImage at 0x7a646dbf5540>"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 29
         },
         {
           "output_type": "display_data",
@@ -676,22 +676,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WDfoUmxMKugL",
-        "outputId": "b290c08e-0c9e-4ad3-d263-867a2d59389b"
+        "id": "WDfoUmxMKugL"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/5\n",
-            "  73/1240 [>.............................] - ETA: 20:51 - loss: 3.1421 - masked_acc: 0.3063"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model.compile(optimizer=tf.keras.optimizers.Adam(),\n",
         "          loss=masked_loss,metrics=[masked_acc])\n",
@@ -704,8 +691,8 @@
         "    print(predict(self.model, 10000))\n",
         "    self.model.optimizer.lr.assign(new_lr)\n",
         "\n",
-        "train = CustomDataGen(256, 1)\n",
-        "val = CustomDataGen(256, 0)\n",
+        "train = CustomDataGen(64, 1)\n",
+        "val = CustomDataGen(64, 0)\n",
         "model.fit(train, validation_data=val, epochs=5, callbacks=[my_callback()])"
       ]
     }
@@ -716,7 +703,7 @@
       "machine_shape": "hm",
       "provenance": [],
       "mount_file_id": "1QyswmFpDOafdCi7qQgarEsNtNefHhs-D",
-      "authorship_tag": "ABX9TyOORjaziWhnkeNtQq2g7APG",
+      "authorship_tag": "ABX9TyMbpNvTgM5GE1bU//P5/46b",
       "include_colab_link": true
     },
     "kernelspec": {
