--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMTnhvrRsvSaTSzg2lIUyXq",
+      "authorship_tag": "ABX9TyMabzuecrq4Y7pmzD2sqznx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,51 +342,46 @@
         "for i in range(300):\n",
         "  padded_tgt = pad_pack(tgt).to(M.device)\n",
         "  out = M.T.decoder(M.T.tgt_embedder(padded_tgt), latent, src_mask, subsequent_mask((padded_tgt != 0).unsqueeze(-2)))\n",
+        "  out = M.T.generator(out) # I was reading the code and found that I forgot this\n",
         "  out = out[:,-1].view(1, 1, out.shape[-1]).mean(dim=1)\n",
-        "  tgt[0].append(find_first_working(torch.sort(out, dim=1, descending=True)[1].cpu().detach().numpy()[0]))"
+        "  tgt[0].append(find_first_working(torch.sort(out, dim=1, descending=True)[1].cpu().detach().numpy()[0]))\n",
+        "print(M.tgt_model.decode(tgt[0])) #WHAT? Run again and worked? oh i ran that first!"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 200
+          "base_uri": "https://localhost:8080/"
         },
         "id": "QSCw3voyyjkP",
-        "outputId": "f81656c4-8936-4dee-91d8-b84fc1d0d973"
+        "outputId": "947c085b-9cea-4367-fd0d-a770af0ac360"
       },
-      "execution_count": 103,
+      "execution_count": 109,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-103-a3c9082984f4>\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m   \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0mtgt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_first_working\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdescending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtgt_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'cpu'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CC(=O)Nc1ccc(O)cc1Cccc1C(C(O)C(C(C)c1c(C(C)cccc1)C(C(O)C(C(C)=C(C(C)c1ccc1)C(C(C(C)=O)c1cccccc(O)cc(C(O)C(C(C)C(C(C)c1ccc(O)CC(=O)C(C(O)C(C(C(C)C(C(C)C(C(=O)C(CC(C)C(C(C(C)c1ccccc1)CC(CC(C(C)=Occccc1)cc(O)C(C(C)C)CC(O)C(C(C)cccC(O)C(C(=O)C(C(C)c1ccccccccccccccccC(CCCCCC(C)C(C(=OCCCC(C)C(C(C)c1cCC(\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(M.tgt_model.decode(tgt[0]))\n"
-      ],
+      "source": [],
       "metadata": {
-        "id": "sGiumvX5Gnth",
-        "outputId": "3590c8d6-5554-41d6-fe47-0133838a896c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sGiumvX5Gnth",
+        "outputId": "0bc85a97-585d-483b-8eef-7e7ca9f03efb"
       },
-      "execution_count": 104,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "arG0TbM[0TbWMUWM[0TT0T00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\n"
+            "CC(=O)Nc1ccc(O)cc1Cccc1C(C(O)C(C(C)c1c(C(C)cccc1)C(C(O)C(C(C)=C(C(C)c1ccc1)C(C(C(C)=O)c1cccccc(O)cc(C(O)C(C(C)C(C(C)c1ccc(O)CC(=O)C(C(O)C(C(C(C)C(C(C)C(C(=O)C(CC(C)C(C(C(C)c1ccccc1)CC(CC(C(C)=Occccc1)cc(O)C(C(C)C)CC(O)C(C(C)cccC(O)C(C(=O)C(C(C)c1ccccccccccccccccC(CCCCCC(C)C(C(=OCCCC(C)C(C(C)c1cCC(\n"
           ]
         }
       ]
