--- a/with_pretrained.ipynb
+++ b/with_pretrained.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1UCIRVi_vKSRZf69Xa6ZqjaUo-_ryLvQP",
-      "authorship_tag": "ABX9TyNAj3OZOZwTCEgJWV1vvASC",
+      "authorship_tag": "ABX9TyOqzeuIdoGNFJQd6dk9y06B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -788,7 +788,7 @@
         "id": "TneB6GCGnuUr",
         "outputId": "b99fae1e-012b-4d52-9338-8978cea5a049"
       },
-      "execution_count": 490,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,97 +815,83 @@
     {
       "cell_type": "code",
       "source": [
-        "ans"
+        "# https://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html\n",
+        "for i in M.T.decoder.parameters():\n",
+        "  i.requires_grad == False\n",
+        "\n",
+        "for i in M.T.generator.parameters():\n",
+        "  i.requires_grad == False"
+      ],
+      "metadata": {
+        "id": "X_bkcC5c4EmG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Image2SMILES(torch.nn.Module):\n",
+        "  def __init__(self, encoder, embeding, decoder, generator):\n",
+        "    super().__init__()\n",
+        "    self.encoder = encoder\n",
+        "    self.embeding = embeding\n",
+        "    self.decoder = decoder\n",
+        "    self.generator = generator\n",
+        "\n",
+        "  def forward (self, image, text_in):\n",
+        "    image_feature = self.encoder(image)\n",
+        "    paded = pad_pack(text_in)\n",
+        "    embedded = self.embeding(paded)\n",
+        "    out = self.decoder(embedded, image_feature,\n",
+        "                       torch.zeros_like(paded),\n",
+        "                       subsequent_mask((paded != 0)\n",
+        "                       .unsqueeze(-2)))\n",
+        "    out = self.generator(out)\n",
+        "    return out"
+      ],
+      "metadata": {
+        "id": "g9--kazs49Lq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Image2SMILES(encoder,\n",
+        "    M.T.tgt_embedder,\n",
+        "             M.T.decoder, M.T.generator)"
+      ],
+      "metadata": {
+        "id": "NsErNlKWLIU4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sum(model(inp_img, [[2]]).detach().numpy())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "HV7Oik4BrWSW",
-        "outputId": "24373142-ab75-4922-ee69-2fd173c896e4"
+        "id": "HiXmCrnsLpJz",
+        "outputId": "3dab1ece-99a8-4b3c-d648-ceda4010280b"
       },
-      "execution_count": 482,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[27,\n",
-              " 49,\n",
-              " 8,\n",
-              " 38,\n",
-              " 14,\n",
-              " 6,\n",
-              " 16,\n",
-              " 21,\n",
-              " 50,\n",
-              " 20,\n",
-              " 22,\n",
-              " 53,\n",
-              " 13,\n",
-              " 5,\n",
-              " 51,\n",
-              " 12,\n",
-              " 66,\n",
-              " 25,\n",
-              " 26,\n",
-              " 3,\n",
-              " 62,\n",
-              " 67,\n",
-              " 32,\n",
-              " 24,\n",
-              " 10,\n",
-              " 69,\n",
-              " 60,\n",
-              " 17,\n",
-              " 56,\n",
-              " 55,\n",
-              " 19,\n",
-              " 44,\n",
-              " 35,\n",
-              " 52,\n",
-              " 40,\n",
-              " 68,\n",
-              " 46,\n",
-              " 57,\n",
-              " 43,\n",
-              " 11,\n",
-              " 29,\n",
-              " 1,\n",
-              " 4,\n",
-              " 63,\n",
-              " 2,\n",
-              " 61,\n",
-              " 28,\n",
-              " 47,\n",
-              " 71,\n",
-              " 34,\n",
-              " 59,\n",
-              " 48,\n",
-              " 42,\n",
-              " 36,\n",
-              " 58,\n",
-              " 70,\n",
-              " 7,\n",
-              " 64,\n",
-              " 23,\n",
-              " 45,\n",
-              " 31,\n",
-              " 33,\n",
-              " 65,\n",
-              " 18,\n",
-              " 39,\n",
-              " 41,\n",
-              " 30,\n",
-              " 9,\n",
-              " 54,\n",
-              " 15,\n",
-              " 37,\n",
-              " 0]"
+              "-438.15005"
             ]
           },
           "metadata": {},
-          "execution_count": 482
+          "execution_count": 516
         }
       ]
     }
