--- a/playground.ipynb
+++ b/playground.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBKGW3x8po4xmkrSPSFhs7",
+      "authorship_tag": "ABX9TyO2xMXzwsNlggSuRSqgoFEn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,52 +28,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "DhdFqoLa6_g9"
+        "id": "DhdFqoLa6_g9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        },
+        "outputId": "3fd211a0-7e70-489d-ef95-ba5258afe963"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "500\n",
+            "500\n",
+            "500\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-63c4762eb477>\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProcess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgetitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m   \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m   \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#understood, there was none at the begining\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "import time, multiprocessing\n",
         "\n",
         "end1, end2 = multiprocessing.Pipe()\n",
         "def getitem(index):\n",
         "  # print(f\"reading {index}\")\n",
+        "  time.sleep(1)\n",
         "  end2.send(500)\n",
         "  # print(f\"sent\")\n",
         "\n",
-        "end2.send(getitem(-1)) #undeerstood, the get item return none and it is saved, why my brain is not working today\n",
+        "getitem(-1) #undeerstood, the get item return none and it is saved, why my brain is not working today\n",
         "for i in range(10):\n",
+        "  if not end1.poll():\n",
+        "    print(\"WARNING: reading too slow\")\n",
         "  print(end1.recv())\n",
+        "  p = multiprocessing.Process(target=getitem, args=(str(0),))\n",
+        "  p.start()\n",
+        "  time.sleep(2)\n",
+        "\n",
         "#understood, there was none at the begining"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "end1, end2 = multiprocessing.Pipe()\n",
-        "end2.send(getitem(-1))\n",
-        "end1.recv()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RNOT-aO9HvJp",
-        "outputId": "821ed2f1-49ea-4af4-c610-57ec3d11add4"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "500"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
       ]
     },
     {
@@ -84,7 +89,7 @@
       "metadata": {
         "id": "mAVQwTrNHy-o"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +112,7 @@
         "id": "TV5ymqy1G00a",
         "outputId": "9e20d1fb-3f08-4cd5-d376-3a33c0cc12d1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +136,7 @@
         "id": "VFnC1xE5G5FZ",
         "outputId": "d680fb6b-d3c6-4002-f240-9bacb5413f17"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +170,7 @@
       "metadata": {
         "id": "i67YCh5uDF-i"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
